# mediahost

./: .cursorrules  .env.example  .flake8  Dockerfile  README.md  Tiltfile  docker-compose.yml  environment.yml  generate_test_data.py  nginx.conf  pyproject.toml  requirements.txt  robots.txt  run_tests.sh
.github/workflows/: ci-cd.yml
app/: api_docs.py  main.py
app/admin/: __init__.py  dashboard.py
app/analytics/: advanced_analytics.py  dashboard.py
app/auth/: auth.py  forms.py
app/blog/: blog_management.py
app/components/: video_player.py
app/content/: faq.py
app/database/: db.py
app/events/: event_browser.py  event_management.py
app/feedback/: feedback_management.py  platform_feedback.py
app/landing_page/: builder.py  display.py  templates.py
app/messaging/: nats_client.py
app/notifications/: notification_system.py
app/payments/: stripe_integration.py
app/recommendations/: recommendation_engine.py
app/search/: search_engine.py
app/storage/: minio_client.py
app/tasks/: async_tasks.py  notification_tasks.py
app/user/: dashboard.py
app/utils/: calendar_integration.py  custom_css.py  seo_utils.py  sitemap_generator.py  social_sharing.py  theme_manager.py
config/monitoring/: prometheus.yml  promtail-config.yaml
config/sql/: 01_users.sql  02_events.sql  03_videos.sql  04_merchandise.sql  05_page_blocks.sql  06_comments.sql  07_ratings.sql  08_categories.sql  09_event_categories.sql  10_tags.sql  11_event_tags.sql  12_event_views.sql  13_event_access.sql  14_merchandise_purchases.sql  15_blog_posts.sql  16_notifications.sql  (+1 more)
(+5 files in other folders)
